--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: danieljw.net
-description: A collection of things that I've worked on and interesting projects that might interest you
+description: A collection of things that I've worked on and interesting projects that you may find useful.
 author: Daniel W
 language: en
 permalink: posts/:post_title/
