--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,11 @@ services:
     deploy:
       restart_policy:
         condition: unless-stopped
-      # replicas: 1
-      # resources:
-      #  limits:
-      #    cpus: "0.25"
-      #    memory: 128M
+      replicas: 1
+      resources:
+       limits:
+         cpus: "0.25"
+         memory: 256M
     ports:
       - "4000:4000"
     volumes:
@@ -21,7 +21,7 @@ services:
       - './public:${HEXO_PATH}/public:rw'
       - './posts:${HEXO_PATH}/source/_posts'
     networks:
-      - dnet
+      - dnet  
 
 networks: 
   dnet:
