i made some changes

--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,16 @@ permalink: posts/:post_title/
 
 theme: cactus
 theme_config:
-  nav: { home: /, projects: https://github.com/djw4}
-  colorscheme: white
-  posts_overview: { show_all_posts: true }
-  social_links: { github: http://github.com/djw4, linkedin: https://www.linkedin.com/in/djw1 }
-  projects_url: http://github.com/djw4
+  projects_url:       http://github.com/djw4
+  colorscheme:        white
+  nav:                { home: /, projects: https://github.com/djw4}
+  gravatar:           { email: dw@danieljw.net }
+  posts_overview:     { show_all_posts: true }
+  social_links:       { github: http://github.com/djw4, linkedin: https://www.linkedin.com/in/djw1 }
+  disqus:             { enabled: false }
+  google_analytics:   { enabled: false }
+  baidu_analytics:    { enabled: false }
   rss: false
-  disqus: { enabled: false }
-  google_analytics: { enabled: false }
-  baidu_analytics: { enabled: false }
-  gravatar: [ email: dw@danieljw.net ]
 
 # deploy:
 #   type: ftpsync
