--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,10 @@ install:
   - make build-images
 script:
   - make build
+deploy:
+  provider: s3
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
+  bucket: $AWS_BUCKET_NAME
+  region: $AWS_REGION
+  skip_cleanup: true
