--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,4 +32,4 @@ jobs:
           aws_secret_access_key: ${{ secrets.AWS_SECRET_KEY }}
           aws_bucket: ${{ secrets.AWS_BUCKET_NAME }}
           source_dir: output
-          destination_dir: test
+          # destination_dir: test
